--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Pakistan - Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="favicon.ico">
+    <link rel="icon" href="favicon.ico"  type="image/x-icon">
 </head>
 
 <body>
